--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 07 12:36:27 KST 2016
-sdk.dir=/home/hsue/Android/Sdk
+#Thu Mar 10 19:29:26 KST 2016
+sdk.dir=C\:\\Users\\sue\\AppData\\Local\\Android\\sdk
